--- a/PalesaJoyPhiriResume7.html
+++ b/PalesaJoyPhiriResume7.html
@@ -4,11 +4,17 @@
  
   <head>
 
+    <!--Meta added-->
     <meta charset="utf-8">
     <meta name="viewpoint" content="width-device-width, initial-scale=1.0">
     
+    <!--Title and link to CSS-->
     <title> Palesa Joy Phiri Resume</title>
     <link rel="stylesheet" href="./CSS/css.zip.css/css/stylesheet.css" >
+
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
   </head>
 
