--- a/Resume10.html
+++ b/Resume10.html
@@ -195,13 +195,13 @@
     </ol>
     <div class="carouselItems">
       <div class="carousel-item active">
-        <img class="car" src="./Images/Html.png" alt="First slide">
+        <img class="car" src="./Images/Facebook.png" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="car" src="./Images/Css.png" alt="Second slide">
+        <img class="car" src="./Images/TikTok.png" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="car" src="./Images/Js.png" alt="Third slide">
+        <img class="car" src="./Images/YouTube.png" alt="Third slide">
       </div>
     </div>
     <a class="control1" href="#carousel" role="button" data-slide="prev">
@@ -213,41 +213,6 @@
       <span class="sr-only"></span>
     </a>
   </div>
-
-  <!-- Slideshow container -->
-<div class="slideshow-container">
-
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="img1.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="img2.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
-  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
 
 </main>
 
