--- a/Resume10.html
+++ b/Resume10.html
@@ -192,16 +192,20 @@
       <li data-target="#carousel" data-slide-to="0" class="active"></li>
       <li data-target="#carousel" data-slide-to="1"></li>
       <li data-target="#carousel" data-slide-to="2"></li>
+      <li data-target="#carousel" data-slide-to="3"></li>
     </ol>
     <div class="carouselItems">
       <div class="carousel-item active">
-        <img class="car" src="./Images/Facebook.png" alt="First slide">
+        <img class="car" src="./Images/Loreto.png" alt="First slide - Loreto Convent School">
       </div>
       <div class="carousel-item">
-        <img class="car" src="./Images/TikTok.png" alt="Second slide">
+        <img class="car" src="./Images/Stellenbosh.jpg" alt="Second slide - Stellenbosch University">
       </div>
       <div class="carousel-item">
-        <img class="car" src="./Images/YouTube.png" alt="Third slide">
+        <img class="car" src="./Images/Unisa.png" alt="Third slide - UNISA">
+      </div>
+      <div class="carousel-item">
+        <img class="car" src="./Images/CodeSpace.png" alt="Fourth slide - CodeSpace">
       </div>
     </div>
     <a class="control1" href="#carousel" role="button" data-slide="prev">
