--- a/Resume10.html
+++ b/Resume10.html
@@ -208,12 +208,12 @@
         <img class="car" src="./Images/CodeSpace.png" alt="Fourth slide - CodeSpace">
       </div>
     </div>
-    <a class="control1" href="#carousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <a class="control" href="#carousel" role="button" data-slide="prev">
+      <span class="prev" aria-hidden="true"></span>
       <span class="sr-only"></span>
     </a>
-    <a class="control2" href="#carousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <a class="control" href="#carousel" role="button" data-slide="next">
+      <span class="next" aria-hidden="true"></span>
       <span class="sr-only"></span>
     </a>
   </div>
