--- a/Resume10.html
+++ b/Resume10.html
@@ -98,7 +98,7 @@
       <h4 id="Skills" class="Sections"> SKILLS </h4>
     </p>
 
-    <article id="Realskillsdiv">
+    <article id="Realskillsdiv" class="container">
    
       <div id="Creativeskills"> <p class="CCOskills">Creative skills</p>
         <ul>
