--- a/Resume10.html
+++ b/Resume10.html
@@ -200,10 +200,10 @@
   </article>
 
    <!-- Form -->
-
+   <h2 id="contactForm">Contact</h2>
 
     <form action="CodeSpace" method="post" id="contact"> 
-
+      
       <div class="form">
         <label for="User id"> Name: </label>
         <input type="text" id="user id" name="Name" required>  
